--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 				<nav class="header__menu">
 					<ul class="menu__list">
 						<li class="menu__item">
-							<a href="" class="menu__link"><img src="/image/home/logo.svg" alt="">[board] Outsource</a>
+							<a href="" class="menu__link"><img src="image/home/logo.svg" alt="">[board] Outsource</a>
 						</li>
 						<li class="menu__item_buffer">
 							<a href="" class="menu__link"></a>
@@ -42,7 +42,7 @@
 					<div class="main-block__body">
 						<div class="main-block__title">Telegram Channel for projects, leads, and resources exchange <span>#1 in Ukraine</span> for IT outsourcing and product companies</div>
 						<div class="main-block__text">
-							<img class="imgtelega" src="/image/main/Group.png" alt="">
+							<img class="imgtelega" src="image/main/Group.png" alt="">
 							@BoardOutsource</div>
 					</div>
 					<div class="main-block__image _ibg"></div>
@@ -56,11 +56,11 @@
 			<div class="footer__container _container">
 				<div class="footer__end">
 					<div class="footer__mail">
-						<img src="/image/footer/mail.svg" alt="">
+						<img src="image/footer/mail.svg" alt="">
 					</div>
 					<a class="mail__adress" href="mailto:info@boardoutsource.com" target="_blank" rel="noopener noreferrer">info@boardoutsource.com</a>
 					<div class="footer__tel">
-						<img src="/image/footer/phone.svg" alt="">
+						<img src="image/footer/phone.svg" alt="">
 						<a class="tel__num" href="tel:+380667442561">+380 66 744 25 61</a>
 					</div>					
 					
