--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link href="https://fonts.googleapis.com/css?family=Montserrat:300,regular,500,600,700" rel="stylesheet" />
+		<link href="https://fonts.googleapis.com/css?family=Roboto:300,regular,500,700" rel="stylesheet" />
 		<title>telegram</title>
 		<link rel="stylesheet" href="css/style.css" />
 		<meta http-equiv="Content-type" content="text/html;charset=UTF-8" />
@@ -45,11 +46,56 @@
 							<img class="imgtelega" src="image/main/Group.png" alt="">
 							@BoardOutsource</div>
 					</div>
-					<div class="main-block__image _ibg"></div>
+					<div class="main-block__image _ibg">
+	<!--					<img src="image/main/optical-logo.jpg" alt=""> -->
+					</div>
 				</div>
-				
+			</div>
+			<div class="page__price-block price-block">
+				<div class="price-block_container _container">
+					<div class="price-block__text">
+						<div class="price-block__text_free"><span>Free</span> publishment every week</div>
+						<div class="price-block__text_sub">Get a free publication each week.<br>Post has 5 days availability in the spreadsheet. Publish any time.<br>You can make publishment visit telegram BOT – @boardOutsourceBot</div>
 
+					</div>
+					<div class="price-block__plan">
+						<div class="price-block__list">
+							<p>Plan:</p>
+							<p>Price:</p>
+							<p>Publications per week:</p>
+							<p>Post availability in the spreadsheet:</p>							
+						</div>
+						<div class="price-block__start">
+							<div class="price-block__start_recomendation">Good for start</div>
+							<div class="price-block__start_name">Basic</div>
+							<div class="price-block__start__sum sum_green">Free</div>
+							<div class="price-block__start_publication"><num>1</num> publication</div>
+							<div class="price-block__start_period">5 days</div>
+						</div>
+						<div class="price-block__start">
+							<div class="price-block__start_recomendation">For small business</div>
+							<div class="price-block__start_name">Basic</div>
+							<div class="price-block__start__sum sum_blue">49 EUR</div>
+							<div class="price-block__start_publication"><num>5</num> publication</div>
+							<div class="price-block__start_period">Lifetime</div>
+						</div>
+						<div class="price-block__start">
+							<div class="price-block__start_recomendation">Most popular</div>
+							<div class="price-block__start_name">Basic</div>
+							<div class="price-block__start__sum sum_blue">199 EUR</div>
+							<div class="price-block__start_publication"><num>50</num> publication</div>
+							<div class="price-block__start_period">Lifetime</div>
+						</div>
+						<div class="price-block__start">
+							<div class="price-block__start_recomendation">For Corporations</div>
+							<div class="price-block__start_name">Basic</div>
+							<div class="price-block__start__sum sum_blue">499 EUR</div>
+							<div class="price-block__start_publication"><num>200</num> publication</div>
+							<div class="price-block__start_period">Lifetime</div>
+						</div>
+					</div>
 				</div>
+			</div>
 			</div>		
 		</main>
 		<footer class="footer">
