--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 							@BoardOutsource</div>
 					</div>
 					<div class="main-block__image _ibg">
-	<!--					<img src="image/main/optical-logo.jpg" alt=""> -->
+						<img src="image/main/optical-logo.jpg" alt="">
 					</div>
 				</div>
 			</div>
@@ -55,7 +55,7 @@
 				<div class="price-block_container _container">
 					<div class="price-block__text">
 						<div class="price-block__text_free"><span>Free</span> publishment every week</div>
-						<div class="price-block__text_sub">Get a free publication each week.<br>Post has 5 days availability in the spreadsheet. Publish any time.<br>You can make publishment visit telegram BOT – @boardOutsourceBot</div>
+						<div class="price-block__text_sub">Get a free publication each week.<br>Post has 5 days availability in the spreadsheet. Publish any time.<br>You can make publishment visit telegram BOT – <span>@boardOutsourceBot</span></div>
 
 					</div>
 					<div class="price-block__plan">
@@ -93,6 +93,48 @@
 							<div class="price-block__start_publication"><num>200</num> publication</div>
 							<div class="price-block__start_period">Lifetime</div>
 						</div>
+					</div>
+					<div class="page__rules-block rules-block">
+						<div class="rules-block_container _container">
+							<div class="rules-block__title">Rules</div>
+							<div class="rules-block__list">
+								<div class="list_emoji"></div>
+								<div class="list_text">Advertising and links are prohibited!</div>
+							</div>
+							<div class="rules-block__list">
+								<div class="list_emoji"></div>
+								<div class="list_text">In case of using different telegram accounts and sharing the same contact information in the posts account will be restricted for 1 month. Use paid posts for multiple publications.</div>
+							</div>
+							<div class="rules-block__list">
+								<div class="list_emoji"></div>
+								<div class="list_text">In case of publishment of multiple roles and different skill set developers in one request account will be restricted for 1 month.</div>
+							</div>
+							<div class="rules-block__list">
+								<div class="list_emoji"></div>
+								<div class="list_text">Administrators can block a member, delete posts without giving a reason.</div>
+							</div>
+							<div class="rules-block__list">
+								<div class="list_emoji"></div>
+								<div class="list_text">You don't need to post the same information several times a day.</div>
+							</div>
+							<div class="rules-block__list">
+								<div class="list_emoji"></div>
+								<div class="list_text">Share relevant information. In any case, developers will be verified at the interview or presale. Please respect the time of your colleagues. </div>
+							</div>
+							<div class="rules-block__list">
+								<div class="list_emoji">;)</div>
+								<div class="list_text">If you feel uncomfortable in a group for any reason, feel free to leave or “mute” the notifications. It’s better to be criticized for leaving than for always complaining.</div>
+							</div>
+							<div class="rules-block__list">
+								<div class="list_emoji">:)</div>
+								<div class="list_text">Keep in mind that your request can be interpreted in multiple ways, so use short sentences that can’t be misinterpreted.</div>
+							</div>
+							<div class="rules-block__list">
+								<div class="list_emoji">;)</div>
+								<div class="list_text">In any question or suggestion please contact me Max Polinskiy  – @eskmax</div>
+							</div>
+						</div>
+
 					</div>
 				</div>
 			</div>
