--- a/index.html
+++ b/index.html
@@ -14,15 +14,13 @@
 		<header class="header">
 			<div class="header__container _container">
 				<nav class="header__menu">
+					<a href="" class="menu__link"><img src="image/home/logo4.jpg" alt=""></a>
 					<ul class="menu__list">
-						<li class="menu__item">
-							<a href="" class="menu__link"><img src="image/home/logo.svg" alt="">[board] Outsource</a>
-						</li>
 						<li class="menu__item_buffer">
 							<a href="" class="menu__link"></a>
 						</li>
 						<li class="menu__item">
-							<a href="" class="menu__link">Home</a>
+							<a href="" class="menu__link current">Home</a>
 						</li>
 						<li class="menu__item">
 							<a href="" class="menu__link">Available resources</a>
@@ -39,16 +37,23 @@
 		</header>
 		<main class="page">
 			<div class="page__main-block main-block">
+
+				<div class="main-block_overloft">
+					<div class="main-block_blue"></div>
+					</div>
+
 				<div class="main-block_container _container">
+					
+					<div class="main-block_logo">
+						<img src="/image/main/Group3.jpg" alt="">
+					</div>
 					<div class="main-block__body">
 						<div class="main-block__title">Telegram Channel for projects, leads, and resources exchange <span>#1 in Ukraine</span> for IT outsourcing and product companies</div>
 						<div class="main-block__text">
 							<img class="imgtelega" src="image/main/Group.png" alt="">
 							@BoardOutsource</div>
-					</div>
-					<div class="main-block__image _ibg">
-						<img src="image/main/optical-logo.jpg" alt="">
-					</div>
+							
+					</div>					
 				</div>
 			</div>
 			<div class="page__price-block price-block">
@@ -98,40 +103,40 @@
 						<div class="rules-block_container _container">
 							<div class="rules-block__title">Rules</div>
 							<div class="rules-block__list">
-								<div class="list_emoji"></div>
+								<div class="list_emoji emoji"></div>
 								<div class="list_text">Advertising and links are prohibited!</div>
 							</div>
 							<div class="rules-block__list">
-								<div class="list_emoji"></div>
+								<div class="list_emoji emoji">🙈</div>
 								<div class="list_text">In case of using different telegram accounts and sharing the same contact information in the posts account will be restricted for 1 month. Use paid posts for multiple publications.</div>
 							</div>
 							<div class="rules-block__list">
-								<div class="list_emoji"></div>
+								<div class="list_emoji emoji">👈</div>
 								<div class="list_text">In case of publishment of multiple roles and different skill set developers in one request account will be restricted for 1 month.</div>
 							</div>
 							<div class="rules-block__list">
-								<div class="list_emoji"></div>
+								<div class="list_emoji emoji">🎩</div>
 								<div class="list_text">Administrators can block a member, delete posts without giving a reason.</div>
 							</div>
 							<div class="rules-block__list">
-								<div class="list_emoji"></div>
+								<div class="list_emoji emoji">😓</div>
 								<div class="list_text">You don't need to post the same information several times a day.</div>
 							</div>
 							<div class="rules-block__list">
-								<div class="list_emoji"></div>
+								<div class="list_emoji emoji">📔</div>
 								<div class="list_text">Share relevant information. In any case, developers will be verified at the interview or presale. Please respect the time of your colleagues. </div>
 							</div>
 							<div class="rules-block__list">
-								<div class="list_emoji">;)</div>
+								<div class="list_emoji emoji">😠</div>
 								<div class="list_text">If you feel uncomfortable in a group for any reason, feel free to leave or “mute” the notifications. It’s better to be criticized for leaving than for always complaining.</div>
 							</div>
 							<div class="rules-block__list">
-								<div class="list_emoji">:)</div>
+								<div class="list_emoji emoji">🕹️</div>
 								<div class="list_text">Keep in mind that your request can be interpreted in multiple ways, so use short sentences that can’t be misinterpreted.</div>
 							</div>
 							<div class="rules-block__list">
-								<div class="list_emoji">;)</div>
-								<div class="list_text">In any question or suggestion please contact me Max Polinskiy  – @eskmax</div>
+								<div class="list_emoji emoji">😆</div>
+								<div class="list_text">In any question or suggestion please contact me Max Polinskiy  – <span>@eskmax</span></div>
 							</div>
 						</div>
 
