--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 				<div class="main-block_container _container">
 					
 					<div class="main-block_logo">
-						<img src="/image/main/group3.jpg" alt="">
+						<img src="image/main/3.jpg" alt="">
 					</div>
 					<div class="main-block__body">
 						<div class="main-block__title">Telegram Channel for projects, leads, and resources exchange <span>#1 in Ukraine</span> for IT outsourcing and product companies</div>
