--- a/index.html
+++ b/index.html
@@ -14,8 +14,15 @@
 		<header class="header">
 			<div class="header__container _container">
 				<nav class="header__menu">
-					<a href="" class="menu__link"><img src="image/home/logo4.jpg" alt=""></a>
+					
 					<ul class="menu__list">
+
+						<li class="menu__item-log">
+							<a href="" class="menu__link-log">
+								<a href="" class="menu__link"><img src="image/home/logo4.jpg" alt=""></a>
+							</a>
+						</li>
+
 						<li class="menu__item_buffer">
 							<a href="" class="menu__link"></a>
 						</li>
